--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=8000
-MONGODB_URI=your_mongodb_uri_here
-JWT_SECRET=your_jwt_secret_here
+MONGO_URL=mongodb+srv://ransulthan:zahransukses@cluster0.clwi3v6.mongodb.net/
+JWT_SECRET=your_secret_key
